--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,7 +8,7 @@ body {
   margin: 15px;
 }
 h2 {
-  color: #7d7840;
+  color: #7d7640;
   font-size: 1.1em;
   padding: 5px 0;
 }
@@ -83,6 +83,10 @@ p {
   padding: 5px 10px;
   float: right;
 }
+#container .topo #area-menu .conteudo-menu #menu-locais .reserva:hover {
+  background: #fff5b0;
+  color: #a29750;
+}
 #container .topo #area-menu .conteudo-menu #menu {
   margin-top: 15px;
 }
@@ -124,4 +128,37 @@ p {
 #container .conteudo {
   width: 90%;
   margin-left: 50px;
+}
+#container .conteudo #beneficios li {
+  padding: 8px;
+  border-bottom: 1px solid #f3efcb;
+  height: 6em;
+  list-style: none;
+}
+#container .conteudo #beneficios li:hover {
+  background: #f6f3d6;
+  cursor: pointer;
+}
+#container .conteudo #beneficios li a {
+  text-decoration: none;
+  color: black;
+}
+#container .conteudo #beneficios li a p {
+  font-size: 0.8em;
+}
+#container .conteudo #beneficios li a h3 {
+  font-size: 1.1em;
+  color: #615b2d;
+  padding: 5px 0;
+  background: url(../imagens/ornamento.png) no-repeat center right;
+}
+#container .conteudo #beneficios li a img {
+  float: left;
+  margin-right: 8px;
+}
+#container #rodape {
+  clear: both;
+  padding: 16px;
+  background: #fff url(../imagens/bg-rodape.png) repeat-x top;
+  color: #7d7640;
 }
